objects/ssot__ContactPointPhone__dlm.object
<CustomObject>
    <fields>
        <fullName>cdp_crm_dk1__ssot_PartyId_map_ssot_Id_1639519173371__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ssot_PartyId_map_ssot_Id_1639519173371</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>ssot_PartyId_map_ssot_Id_1639519173371</relationshipLabel>
        <relationshipName>ssot_PartyId_map_ssot_Id_1639519173371</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cdp_crm_dk2__ssot_PartyId_map_ssot_Id_1639532199807__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ssot_PartyId_map_ssot_Id_1639532199807</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>ssot_PartyId_map_ssot_Id_1639532199807</relationshipLabel>
        <relationshipName>ssot_PartyId_map_ssot_Id_1639532199807</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ActiveFromDate__c</fullName>
        <label>Active From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ActiveToDate__c</fullName>
        <label>Active To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__AreaCode__c</fullName>
        <label>Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BestTimeToContactEndTime__c</fullName>
        <label>Best Time To Contact End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BestTimeToContactStartTime__c</fullName>
        <label>Best Time To Contact Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BestTimeToContactTimezoneId__c</fullName>
        <label>Best Time to Contact Timezone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointTypeId__c</fullName>
        <label>Contact Point Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CountryId__c</fullName>
        <label>Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CountryName__c</fullName>
        <label>Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Country__c</fullName>
        <label>[DoNotUse]Country</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreationEventId__c</fullName>
        <label>Creation Event</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreationEventObject__c</fullName>
        <label>Creation Event Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceId__c</fullName>
        <label>Device</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExtensionNumber__c</fullName>
        <label>Extension Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForBusinessUse__c</fullName>
        <label>For Business Use</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForPersonalUse__c</fullName>
        <label>For Personal Use</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FormattedE164PhoneNumber__c</fullName>
        <label>Formatted E164 Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FormattedInternationalPhoneNumber__c</fullName>
        <label>Formatted International Phone Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FormattedNationalPhoneNumber__c</fullName>
        <label>Formatted National Phone Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Contact Point Phone Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Is Active</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsFaxCapable__c</fullName>
        <label>Is Fax Capable</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSMSCapable__c</fullName>
        <label>Is SMS Capable</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsUndeliverable__c</fullName>
        <label>Is Undeliverable</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsVerified__c</fullName>
        <label>Verified</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsVoiceCapable__c</fullName>
        <label>Is Voice Capable</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyRoleId__c</fullName>
        <label>Party Role</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PhoneCountryCode__c</fullName>
        <label>Phone Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreferenceRankNumber__c</fullName>
        <label>Preference Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryFlag__c</fullName>
        <label>Primary Flag</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryPhoneTypeId__c</fullName>
        <label>Primary Phone Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryPhoneType__c</fullName>
        <label>[DoNotUse]Primary Phone Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProfileFirstCreatedDate__c</fullName>
        <label>Profile First Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ProfileLastUpdatedDate__c</fullName>
        <label>Profile Last Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ProfileOccurrenceCount__c</fullName>
        <label>Profile Occurrence Count</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ShortCode__c</fullName>
        <label>Short Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TelephoneNumber__c</fullName>
        <label>Telephone Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TimezoneCode__c</fullName>
        <label>Timezone Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UsageType__c</fullName>
        <label>Usage Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761162451_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContactPointPhone_DeviceId_map_Devic_rel</label>
        <referenceTo>ssot__Device__dlm</referenceTo>
        <relationshipLabel>ContactPointPhone_DeviceId_map_Devic_rel</relationshipLabel>
        <relationshipName>rel_1697761162451_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761164176_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContactPointPhone_PartyId_map_Indivi_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>ContactPointPhone_PartyId_map_Indivi_rel</relationshipLabel>
        <relationshipName>rel_1697761164176_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761168686_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device_Id_map_ContactPointPhone_Devi_rel</label>
        <referenceTo>ssot__Device__dlm</referenceTo>
        <relationshipLabel>Device_Id_map_ContactPointPhone_Devi_rel</relationshipLabel>
        <relationshipName>rel_1697761168686_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ssot_Id_map_ssot_Id_1629904018734__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ssot_Id_map_ssot_Id_1629904018734</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ssot_Id_map_ssot_Id_1629904018734</relationshipLabel>
        <relationshipName>ssot_Id_map_ssot_Id_1629904018734</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>